@@ -5,6 +5,7 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.1
 
 	- Documentation updates.
+	- Delegated Kerberos credentials were not working.
 	- "make distclean" incorrectly removed the edit-config.tmpl
 	  files (STR #2508)
 	- Fix compile problem on HP-UX (STR #2501)
